cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__action_hierarchy.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User;

action "read" appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};

action "readWrite" in [Action::"read", Action::"write"];

action "write" appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};
