cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__action_with_context.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User;

action "view" appliesTo {
  principal: [User],
  resource: [User],
  context: {
    "ip": __cedar::String,
    "timestamp": __cedar::Long
  }
};
