cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__common_types.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User = {
  "id": __cedar::String,
  "profile": {
    "age": __cedar::Long,
    "name": __cedar::String
  }
};

action "view" appliesTo {
  principal: [User],
  resource: [User],
  context: {}
};
