cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__deeply_nested_records.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User = {
  "profile": {
    "personal": {
      "contacts": {
        "email": __cedar::String,
        "phone"?: __cedar::String
      },
      "name": __cedar::String
    },
    "preferences": {
      "notifications": Set<__cedar::String>,
      "theme": __cedar::String
    }
  }
};
